--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="js\jquery-3.5.1.min.js"></script>
     <title>Tipp</title>
     <link rel="stylesheet" type="text/css" href="css/new.css">
 </head>
