--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="line"><hr id="l2" align="left"></div>
         </div>
         <div class="grid2">
-            <div class="ambassadar">AMBASSADAR</div>
+            <div class="ambassadar">AMBASSADOR</div>
             <div><hr id="l3" align="center"></div>
         </div>
         
