--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     
     <div class="front">
         <div class="grid1" >
-            <div class="line"><hr id="l1" text-align="right"></div>
+            <div class="line"><hr id="l1"></div>
             <div class="ClassOf20">ClassOf20</div>
-            <div class="line"><hr id="l2" text-align="left"></div>
+            <div class="line"><hr id="l2"></div>
         </div>
         <div class="grid2">
             <div class="ambassadar">AMBASSADOR</div>
