--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="js\jquery-3.5.1.min.js"></script>
     <title>Tipp</title>
     <link rel="stylesheet" type="text/css" href="css/new.css">
 </head>
@@ -15,7 +14,7 @@
     
     <div class="front">
         <div class="grid1" >
-            <div class="line"><hr id="l1"></div>
+            <div class="line"><hr id="l1" align="right"></div>
             <div class="ClassOf20">ClassOf20</div>
             <div class="line"><hr id="l2"></div>
         </div>
