비번오류고침form태그 때문

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="grid3">
             <div class="g3_text" id="DATE">DATE<br><a>SEP. 28</a></div>
             <div class="g3_text" id="ENTER_CODE">ENTER CODE<br>
-                <form>
+                <div>
                     <input type="password" name="pswd" id="pswd" maxlength="2"/>
-                </form>
+                </div>
             </div>
             <div class="g3_text" id="WITH">WITH<br><a id="TippCorp">Tipp Corp.</a></div>
         </div>
