--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipp</title>
+    <title>Tipp AMBASSADOR</title>
     <script src="js\jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/new.css">
 </head>
