--- a/page.html
+++ b/page.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/page.css">
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <script src="js\jquery-3.5.1.min.js"></script>
-    <title>ClassOf20</title>
+    <title>Tipp AMBASSADOR</title>
 </head>
 <body>
-    <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-        <source src="video.mp4" type="video/mp4">
-        Sorry, your browser does not support HTML5 video.
-    </video>
     <div class="grid">
         <div class="left-side">
             <p id="myP0" ><button class="hide0">- Tipp ?</button></p><br>
@@ -47,7 +42,8 @@
                     <p>우수 활동자 시상 </p><br>
             </div>
             <div class="box box4">
-                <p>link</p>
+                <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdqf8RSt1K6_Lm6bNusheI5sHhaNKarpEravB5-hFZbpIYt6Q/viewform?vc=0&c=0&w=1&flr=0&gxids=7628">
+                    신청하러가기(click!)</a></p>
             </div>
 
         </div>
